--- a/anime/al-batal-al-khumasi/episode-1/index.html
+++ b/anime/al-batal-al-khumasi/episode-1/index.html
@@ -113,70 +113,94 @@
 </div>
 
 <!-- ================= MAIN (EPISODES PAGE) ================= -->
-<section class="anime-bg-header">
-
-  <div class="anime-bg-content">
-    <img
-      class="anime-poster"
-      src="https://i.ibb.co/j94b96X5/1ll-RZXpjw-Vwn3-Lgma6q-N8hm-ZUbl.webp"
-      alt="بوستر أنمي البطل الخماسي">
-
-    <div class="anime-info">
-      <h1>البطل الخماسي (Combattler V)</h1>
-    </div>
-  </div>
-
-</section>
-
-
-
 <section class="anime-details-section">
 
   <!-- أزرار التفاعل -->
   <div class="anime-actions">
-    <button class="btn-favorite">أضف إلى المفضلات</button>
-    <button class="btn-watchlater">أضف للمشاهدة لاحقًا</button>
+    <button class="btn-favorite">
+      <i class="fa-regular fa-heart"></i>
+      أضف إلى المفضلات
+    </button>
+
+    <button class="btn-watchlater">
+      <i class="fa-regular fa-clock"></i>
+      أضف للمشاهدة لاحقًا
+    </button>
   </div>
 
-  <!-- العنوان (اختياري تكراره بصريًا) -->
+  <!-- العنوان -->
   <h2 class="anime-details-title">البطل الخماسي (Combattler V)</h2>
 
   <!-- التقييم -->
   <div class="anime-rating">
     <div class="stars">
-      ★★★★☆
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-regular fa-star"></i>
     </div>
+
     <span class="rating-value">4.20</span>
     <span class="rating-count">10 تقييم</span>
   </div>
 
-  <!-- الوصف -->
+  <!-- القصة -->
   <div class="anime-story">
-    <h3>القصة</h3>
+    <h3><i class="fa-solid fa-book-open"></i> القصة</h3>
     <p>
-      تدور أحداث أنمي البطل الخماسي حول خمسة طيارين يقودون مركبات متطورة
-      تندمج لتشكيل الروبوت العملاق كومباتلر V، في مواجهة تهديدات
-      إمبراطورية كامبيلار الشريرة.
+      أنمي البطل الخماسي يروي قصة خمسة طيارين يقودون مركبات
+      تندمج لتشكيل الروبوت العملاق كومباتلر V
+      للدفاع عن الأرض من الغزو.
     </p>
   </div>
 
-  <!-- المعلومات الإضافية -->
+  <!-- المعلومات -->
   <div class="anime-meta-list">
-    <div><strong>القسم:</strong> مسلسل مدبلج</div>
-    <div><strong>سنة الإنتاج:</strong> 1976</div>
-    <div><strong>النوع:</strong> أكشن، خيال علمي، Mecha</div>
-    <div><strong>عدد الحلقات:</strong> 54 حلقة</div>
-    <div><strong>مدة الحلقة:</strong> 24 دقيقة</div>
-    <div><strong>الجودة:</strong> HD</div>
-    <div><strong>المصدر:</strong> ArabP2P</div>
+
+    <div>
+      <i class="fa-solid fa-tv"></i>
+      <span>القسم:</span> مسلسل مدبلج
+    </div>
+
+    <div>
+      <i class="fa-solid fa-calendar"></i>
+      <span>سنة الإنتاج:</span> 1976
+    </div>
+
+    <div>
+      <i class="fa-solid fa-tags"></i>
+      <span>النوع:</span> أكشن، خيال علمي، Mecha
+    </div>
+
+    <div>
+      <i class="fa-solid fa-layer-group"></i>
+      <span>عدد الحلقات:</span> 54
+    </div>
+
+    <div>
+      <i class="fa-solid fa-clock"></i>
+      <span>مدة الحلقة:</span> 24 دقيقة
+    </div>
+
+    <div>
+      <i class="fa-solid fa-hd"></i>
+      <span>الجودة:</span> HD
+    </div>
+
+    <div>
+      <i class="fa-solid fa-globe"></i>
+      <span>المصدر:</span> ArabP2P
+    </div>
+
   </div>
 
   <!-- المشاركة -->
   <div class="anime-share">
-    <button>Facebook</button>
-    <button>X</button>
-    <button>WhatsApp</button>
-    <button>Telegram</button>
+    <button aria-label="Facebook"><i class="fa-brands fa-facebook-f"></i></button>
+    <button aria-label="X"><i class="fa-brands fa-x-twitter"></i></button>
+    <button aria-label="WhatsApp"><i class="fa-brands fa-whatsapp"></i></button>
+    <button aria-label="Telegram"><i class="fa-brands fa-telegram"></i></button>
   </div>
 
 </section>
