--- a/anime/al-batal-al-khumasi/episode-1/index.html
+++ b/anime/al-batal-al-khumasi/episode-1/index.html
@@ -113,6 +113,24 @@
 </div>
 
 <!-- ================= MAIN (EPISODES PAGE) ================= -->
+<section class="anime-bg-header">
+
+  <div class="anime-bg-content">
+    <img
+      class="anime-poster"
+      src="https://i.ibb.co/j94b96X5/1ll-RZXpjw-Vwn3-Lgma6q-N8hm-ZUbl.webp"
+      alt="بوستر أنمي البطل الخماسي">
+
+    <div class="anime-info">
+      <h1>البطل الخماسي (Combattler V)</h1>
+    </div>
+  </div>
+
+</section>
+
+
+
+
 <section class="anime-details-section">
 
   <!-- أزرار التفاعل -->
