--- a/anime/al-batal-al-khumasi/episode-1/index.html
+++ b/anime/al-batal-al-khumasi/episode-1/index.html
@@ -151,17 +151,19 @@
 
   <!-- التقييم -->
   <div class="anime-rating">
-    <div class="stars">
-      <i class="fa-solid fa-star"></i>
-      <i class="fa-solid fa-star"></i>
-      <i class="fa-solid fa-star"></i>
-      <i class="fa-solid fa-star"></i>
-      <i class="fa-regular fa-star"></i>
-    </div>
 
-    <span class="rating-value">4.20</span>
-    <span class="rating-count">10 تقييم</span>
+  <div class="stars" id="starRating">
+    <i class="fa-regular fa-star" data-value="1"></i>
+    <i class="fa-regular fa-star" data-value="2"></i>
+    <i class="fa-regular fa-star" data-value="3"></i>
+    <i class="fa-regular fa-star" data-value="4"></i>
+    <i class="fa-regular fa-star" data-value="5"></i>
   </div>
+
+  <span class="rating-value" id="ratingValue">0.0</span>
+  <span class="rating-count" id="ratingCount">0 تقييم</span>
+
+</div>
 
   <!-- القصة -->
   <div class="anime-story">
