--- a/anime/al-batal-al-khumasi/episode-1/index.html
+++ b/anime/al-batal-al-khumasi/episode-1/index.html
@@ -150,18 +150,19 @@
   <h2 class="anime-details-title">البطل الخماسي (Combattler V)</h2>
 
   <!-- التقييم -->
-  <div class="anime-rating">
+  <div class="anime-rating imdb-rating">
 
-  <div class="stars" id="starRating">
-    <i class="fa-regular fa-star" data-value="1"></i>
-    <i class="fa-regular fa-star" data-value="2"></i>
-    <i class="fa-regular fa-star" data-value="3"></i>
-    <i class="fa-regular fa-star" data-value="4"></i>
-    <i class="fa-regular fa-star" data-value="5"></i>
-  </div>
+  <span class="imdb-star">
+    <i class="fa-solid fa-star"></i>
+  </span>
 
-  <span class="rating-value" id="ratingValue">0.0</span>
-  <span class="rating-count" id="ratingCount">0 تقييم</span>
+  <span class="imdb-score">4.2</span>
+
+  <span class="imdb-total">
+    / 10 <small>(10 تقييم)</small>
+  </span>
+
+  <span class="imdb-label">IMDb</span>
 
 </div>
 
