--- a/anime/al-batal-al-khumasi/episode-1/index.html
+++ b/anime/al-batal-al-khumasi/episode-1/index.html
@@ -205,15 +205,11 @@
     </div>
 
     <div>
-      <i class="fa-solid fa-hd"></i>
-      <span>الجودة:</span> HD
-    </div>
+  <i class="fa-solid fa-video"></i>
+  <span>الجودة:</span> HD
+</div>
 
-    <div>
-      <i class="fa-solid fa-globe"></i>
-      <span>المصدر:</span> ArabP2P
-    </div>
-
+    
   </div>
 
   <!-- المشاركة -->
