--- a/anime/al-batal-al-khumasi/episode-1/index.html
+++ b/anime/al-batal-al-khumasi/episode-1/index.html
@@ -241,6 +241,17 @@
 
 </section>
 
+
+
+<!-- صورة المشاهدة -->
+<div class="watch-illustration">
+  <img
+    src="https://i.ibb.co/0LYK5mc/view-3d-young-child-watching-movie.jpg"
+    alt="طفل يشاهد فيلماً كرتونياً"
+    loading="lazy"
+    decoding="async">
+</div>
+
 <!-- ================= FOOTER ================= -->
 <footer class="site-footer">
 
