--- a/anime/al-batal-al-khumasi/episode-1/index.html
+++ b/anime/al-batal-al-khumasi/episode-1/index.html
@@ -243,14 +243,38 @@
 
 
 
-<!-- صورة المشاهدة -->
-<div class="watch-illustration">
-  <img
-    src="https://i.ibb.co/HTRGG2Zq/view-3d-young-child-watching-movie.jpg"
-    alt="طفل يشاهد فيلماً كرتونياً"
-    loading="lazy"
-    decoding="async">
-</div>
+<section class="watch-section">
+
+  <!-- منطقة المشاهدة -->
+  <div class="watch-box">
+    <img
+      src="https://i.ibb.co/HTRGG2Zq/view-3d-young-child-watching-movie.jpg"
+      alt="اضغط على حلقة لبدء المشاهدة">
+
+    <div class="watch-overlay">
+      <h2>إضغط على حلقة<br>لبدء المشاهدة</h2>
+    </div>
+  </div>
+
+  <!-- قائمة الحلقات -->
+  <div class="episodes-box">
+    <div class="episodes-header">
+      <span>جميع الحلقات</span>
+    </div>
+
+    <ul class="episodes-list">
+      <li>الحلقة الأولى</li>
+      <li>الحلقة الثانية</li>
+      <li>الحلقة الثالثة</li>
+      <li>الحلقة الرابعة</li>
+      <li>الحلقة الخامسة</li>
+      <li>الحلقة السادسة</li>
+      <li>الحلقة السابعة</li>
+      <li>الحلقة الثامنة</li>
+    </ul>
+  </div>
+
+</section>
 
 <!-- ================= FOOTER ================= -->
 <footer class="site-footer">
