--- a/anime/al-batal-al-khumasi/episode-1/index.html
+++ b/anime/al-batal-al-khumasi/episode-1/index.html
@@ -243,35 +243,34 @@
 
 
 
-<section class="watch-section">
+<section class="watch-layout">
 
-  <!-- منطقة المشاهدة -->
-  <div class="watch-box">
-    <img
-      src="https://i.ibb.co/HTRGG2Zq/view-3d-young-child-watching-movie.jpg"
-      alt="اضغط على حلقة لبدء المشاهدة">
-
-    <div class="watch-overlay">
-      <h2>إضغط على حلقة<br>لبدء المشاهدة</h2>
+  <!-- HERO -->
+  <div class="watch-hero">
+    <div class="hero-overlay">
+      <h2>اضغط على حلقة<br>لبدء المشاهدة</h2>
     </div>
   </div>
 
-  <!-- قائمة الحلقات -->
-  <div class="episodes-box">
-    <div class="episodes-header">
+  <!-- EPISODES -->
+  <div class="episodes-card">
+
+    <div class="episodes-title">
       <span>جميع الحلقات</span>
+      <span class="sort-icon">⇅</span>
     </div>
 
-    <ul class="episodes-list">
-      <li>الحلقة الأولى</li>
-      <li>الحلقة الثانية</li>
-      <li>الحلقة الثالثة</li>
-      <li>الحلقة الرابعة</li>
-      <li>الحلقة الخامسة</li>
-      <li>الحلقة السادسة</li>
-      <li>الحلقة السابعة</li>
-      <li>الحلقة الثامنة</li>
+    <ul class="episodes">
+      <li><span>1.</span> الحلقة الأولى</li>
+      <li><span>2.</span> الحلقة الثانية</li>
+      <li><span>3.</span> الحلقة الثالثة</li>
+      <li><span>4.</span> الحلقة الرابعة</li>
+      <li><span>5.</span> الحلقة الخامسة</li>
+      <li><span>6.</span> الحلقة السادسة</li>
+      <li><span>7.</span> الحلقة السابعة</li>
+      <li><span>8.</span> الحلقة الثامنة</li>
     </ul>
+
   </div>
 
 </section>
