--- a/anime/al-batal-al-khumasi/episode-1/index.html
+++ b/anime/al-batal-al-khumasi/episode-1/index.html
@@ -247,10 +247,11 @@
 
   <!-- HERO -->
   <div class="watch-hero">
-    <div class="hero-overlay">
-      <h2>اضغط على حلقة<br>لبدء المشاهدة</h2>
-    </div>
+  <img src="https://i.ibb.co/HTRGG2Zq/view-3d-young-child-watching-movie.jpg" alt="">
+  <div class="hero-overlay">
+    <h2>اضغط على حلقة<br>لبدء المشاهدة</h2>
   </div>
+</div>
 
   <!-- EPISODES -->
   <div class="episodes-card">
