--- a/anime/al-batal-al-khumasi/episode-1/index.html
+++ b/anime/al-batal-al-khumasi/episode-1/index.html
@@ -38,9 +38,9 @@
     <div class="header-right">
 
         <!-- زر القائمة -->
-        <div class="menu-icon">
-            <i class="fas fa-bars"></i>
-        </div>
+        <div class="menu-icon" id="aniOpen">
+    <i class="fas fa-bars"></i>
+</div>
 
         <!-- الشعار + اسم الموقع -->
 <a href="/toonia/" class="logo-box">
