--- a/anime/al-batal-al-khumasi/episode-1/index.html
+++ b/anime/al-batal-al-khumasi/episode-1/index.html
@@ -243,7 +243,45 @@
 
 
 
-<section class="watch-layout">
+<!-- قسم المشاهدة -->
+<section class="watch-section">
+
+  <div class="watch-preview">
+    <img src="https://i.ibb.co/HTRGG2Zq/view-3d-young-child-watching-movie.jpg" alt="مشاهدة الحلقات">
+    <div class="watch-overlay">
+      <h2>اضغط على حلقة<br>لبدء المشاهدة</h2>
+    </div>
+  </div>
+
+  <!-- أدوات التحكم -->
+  <div class="watch-controls">
+    <button class="prev">السابقة</button>
+    <button class="next">التالية</button>
+    <button class="settings">الإعدادات</button>
+  </div>
+
+</section>
+
+<!-- قائمة الحلقات -->
+<section class="episodes-section">
+
+  <div class="episodes-header">
+    <span>جميع الحلقات</span>
+    <span class="sort">⇅</span>
+  </div>
+
+  <ul class="episodes-list">
+    <li><span>1</span> الحلقة الأولى</li>
+    <li><span>2</span> الحلقة الثانية</li>
+    <li><span>3</span> الحلقة الثالثة</li>
+    <li><span>4</span> الحلقة الرابعة</li>
+    <li><span>5</span> الحلقة الخامسة</li>
+    <li><span>6</span> الحلقة السادسة</li>
+    <li><span>7</span> الحلقة السابعة</li>
+    <li><span>8</span> الحلقة الثامنة</li>
+  </ul>
+
+</section>
 
 
 
