--- a/anime/al-batal-al-khumasi/episode-1/index.html
+++ b/anime/al-batal-al-khumasi/episode-1/index.html
@@ -243,31 +243,30 @@
 
 
 
-<!-- قسم المشاهدة -->
-<section class="watch-section">
+<!-- WATCH SECTION -->
+<section class="watch-block">
 
-  <div class="watch-preview">
+  <div class="watch-cover">
     <img src="https://i.ibb.co/HTRGG2Zq/view-3d-young-child-watching-movie.jpg" alt="مشاهدة الحلقات">
-    <div class="watch-overlay">
-      <h2>اضغط على حلقة<br>لبدء المشاهدة</h2>
+    <div class="watch-cover-overlay">
+      <h2>إضغط على حلقة<br>لبدء المشاهدة</h2>
     </div>
   </div>
 
-  <!-- أدوات التحكم -->
-  <div class="watch-controls">
-    <button class="prev">السابقة</button>
-    <button class="next">التالية</button>
-    <button class="settings">الإعدادات</button>
+  <div class="watch-bar">
+    <button class="watch-btn">⏮ السابقة</button>
+    <button class="watch-btn">⏭ التالية</button>
+    <button class="watch-btn">⚙ الإعدادات</button>
   </div>
 
 </section>
 
-<!-- قائمة الحلقات -->
-<section class="episodes-section">
+<!-- EPISODES LIST -->
+<section class="episodes-block">
 
-  <div class="episodes-header">
+  <div class="episodes-head">
     <span>جميع الحلقات</span>
-    <span class="sort">⇅</span>
+    <span class="episodes-sort">⇅</span>
   </div>
 
   <ul class="episodes-list">
