--- a/anime/al-batal-al-khumasi/episode-1/index.html
+++ b/anime/al-batal-al-khumasi/episode-1/index.html
@@ -261,27 +261,43 @@
 
 </section>
 
-<!-- EPISODES LIST -->
-<section class="episodes-block">
+<section class="episodes-player-card">
 
-  <div class="episodes-head">
-    <span>جميع الحلقات</span>
-    <span class="episodes-sort">⇅</span>
+  <!-- المعاينة -->
+  <div class="player-preview">
+    <img src="https://i.ibb.co/HTRGG2Zq/view-3d-young-child-watching-movie.jpg" alt="">
+    <div class="player-overlay">
+      <h2>إضغط على حلقة<br>لبدء المشاهدة</h2>
+    </div>
   </div>
 
-  <ul class="episodes-list">
-    <li><span>1</span> الحلقة الأولى</li>
-    <li><span>2</span> الحلقة الثانية</li>
-    <li><span>3</span> الحلقة الثالثة</li>
-    <li><span>4</span> الحلقة الرابعة</li>
-    <li><span>5</span> الحلقة الخامسة</li>
-    <li><span>6</span> الحلقة السادسة</li>
-    <li><span>7</span> الحلقة السابعة</li>
-    <li><span>8</span> الحلقة الثامنة</li>
-  </ul>
+  <!-- شريط التحكم -->
+  <div class="player-controls">
+    <button>⏮ السابقة</button>
+    <button>▶ التالية</button>
+    <button>⚙ الإعدادات</button>
+  </div>
+
+  <!-- قائمة الحلقات -->
+  <div class="episodes-list-box">
+    <div class="episodes-header">
+      <span>جميع الحلقات</span>
+      <span>⇅</span>
+    </div>
+
+    <ul class="episodes-list">
+      <li><span>1</span> الحلقة الأولى</li>
+      <li><span>2</span> الحلقة الثانية</li>
+      <li><span>3</span> الحلقة الثالثة</li>
+      <li><span>4</span> الحلقة الرابعة</li>
+      <li><span>5</span> الحلقة الخامسة</li>
+      <li><span>6</span> الحلقة السادسة</li>
+      <li><span>7</span> الحلقة السابعة</li>
+      <li><span>8</span> الحلقة الثامنة</li>
+    </ul>
+  </div>
 
 </section>
-
 
 
 </section>
