--- a/anime/al-batal-al-khumasi/episode-1/index.html
+++ b/anime/al-batal-al-khumasi/episode-1/index.html
@@ -243,61 +243,46 @@
 
 
 
-<!-- WATCH SECTION -->
-<section class="watch-block">
+<!-- قسم المشاهدة -->
+<section class="watch-section">
 
-  <div class="watch-cover">
+  <div class="watch-preview">
     <img src="https://i.ibb.co/HTRGG2Zq/view-3d-young-child-watching-movie.jpg" alt="مشاهدة الحلقات">
-    <div class="watch-cover-overlay">
-      <h2>إضغط على حلقة<br>لبدء المشاهدة</h2>
+    <div class="watch-overlay">
+      <h2>اضغط على حلقة<br>لبدء المشاهدة</h2>
     </div>
   </div>
 
-  <div class="watch-bar">
-    <button class="watch-btn">⏮ السابقة</button>
-    <button class="watch-btn">⏭ التالية</button>
-    <button class="watch-btn">⚙ الإعدادات</button>
+  <!-- أدوات التحكم -->
+  <div class="watch-controls">
+    <button class="prev">السابقة</button>
+    <button class="next">التالية</button>
+    <button class="settings">الإعدادات</button>
   </div>
 
 </section>
 
-<section class="episodes-player-card">
+<!-- قائمة الحلقات -->
+<section class="episodes-section">
 
-  <!-- المعاينة -->
-  <div class="player-preview">
-    <img src="https://i.ibb.co/HTRGG2Zq/view-3d-young-child-watching-movie.jpg" alt="">
-    <div class="player-overlay">
-      <h2>إضغط على حلقة<br>لبدء المشاهدة</h2>
-    </div>
+  <div class="episodes-header">
+    <span>جميع الحلقات</span>
+    <span class="sort">⇅</span>
   </div>
 
-  <!-- شريط التحكم -->
-  <div class="player-controls">
-    <button>⏮ السابقة</button>
-    <button>▶ التالية</button>
-    <button>⚙ الإعدادات</button>
-  </div>
-
-  <!-- قائمة الحلقات -->
-  <div class="episodes-list-box">
-    <div class="episodes-header">
-      <span>جميع الحلقات</span>
-      <span>⇅</span>
-    </div>
-
-    <ul class="episodes-list">
-      <li><span>1</span> الحلقة الأولى</li>
-      <li><span>2</span> الحلقة الثانية</li>
-      <li><span>3</span> الحلقة الثالثة</li>
-      <li><span>4</span> الحلقة الرابعة</li>
-      <li><span>5</span> الحلقة الخامسة</li>
-      <li><span>6</span> الحلقة السادسة</li>
-      <li><span>7</span> الحلقة السابعة</li>
-      <li><span>8</span> الحلقة الثامنة</li>
-    </ul>
-  </div>
+  <ul class="episodes-list">
+    <li><span>1</span> الحلقة الأولى</li>
+    <li><span>2</span> الحلقة الثانية</li>
+    <li><span>3</span> الحلقة الثالثة</li>
+    <li><span>4</span> الحلقة الرابعة</li>
+    <li><span>5</span> الحلقة الخامسة</li>
+    <li><span>6</span> الحلقة السادسة</li>
+    <li><span>7</span> الحلقة السابعة</li>
+    <li><span>8</span> الحلقة الثامنة</li>
+  </ul>
 
 </section>
+
 
 
 </section>
