--- a/anime/al-batal-al-khumasi/episode-1/index.html
+++ b/anime/al-batal-al-khumasi/episode-1/index.html
@@ -243,43 +243,34 @@
 
 
 
-<!-- قسم المشاهدة -->
+<!-- قسم مشاهدة الحلقة -->
 <section class="watch-section">
 
-  <div class="watch-preview">
-    <img src="https://i.ibb.co/HTRGG2Zq/view-3d-young-child-watching-movie.jpg" alt="مشاهدة الحلقات">
-    <div class="watch-overlay">
-      <h2>اضغط على حلقة<br>لبدء المشاهدة</h2>
+  <div class="video-placeholder">
+    <img src="your-image-here.jpg" alt="غلاف الحلقة">
+    <div class="play-overlay">اضغط لبدء المشاهدة</div>
+  </div>
+
+  <div class="controls">
+    <button class="btn">التالية</button>
+    <button class="btn btn-gray">السابقة</button>
+
+    <div class="icons-group">
+      <span title="الإعدادات">⚙️</span>
+      <span title="تبليغ">🚩</span>
+      <span title="تحميل">📥</span>
     </div>
   </div>
 
-  <!-- أدوات التحكم -->
-  <div class="watch-controls">
-    <button class="prev">السابقة</button>
-    <button class="next">التالية</button>
-    <button class="settings">الإعدادات</button>
+  <div class="episodes-section">
+    <h3 class="section-title">جميع الحلقات 🔃</h3>
+    <ul class="episodes-list">
+      <li><a href="رابط_الحلقة_1">1. الحلقة الأولى</a></li>
+      <li><a href="رابط_الحلقة_2">2. الحلقة الثانية</a></li>
+      <li><a href="رابط_الحلقة_3">3. الحلقة الثالثة</a></li>
+      <li><a href="رابط_الحلقة_4">4. الحلقة الرابعة</a></li>
+    </ul>
   </div>
-
-</section>
-
-<!-- قائمة الحلقات -->
-<section class="episodes-section">
-
-  <div class="episodes-header">
-    <span>جميع الحلقات</span>
-    <span class="sort">⇅</span>
-  </div>
-
-  <ul class="episodes-list">
-    <li><span>1</span> الحلقة الأولى</li>
-    <li><span>2</span> الحلقة الثانية</li>
-    <li><span>3</span> الحلقة الثالثة</li>
-    <li><span>4</span> الحلقة الرابعة</li>
-    <li><span>5</span> الحلقة الخامسة</li>
-    <li><span>6</span> الحلقة السادسة</li>
-    <li><span>7</span> الحلقة السابعة</li>
-    <li><span>8</span> الحلقة الثامنة</li>
-  </ul>
 
 </section>
 
