--- a/anime/al-batal-al-khumasi/episode-1/index.html
+++ b/anime/al-batal-al-khumasi/episode-1/index.html
@@ -247,7 +247,9 @@
 <section class="watch-section">
 
   <div class="video-placeholder">
-    <img src="your-image-here.jpg" alt="غلاف الحلقة">
+    <img
+      src="https://i.ibb.co/HTRGG2Zq/view-3d-young-child-watching-movie.jpg"
+      alt="مشاهدة طفل يشاهد فيلماً ثلاثي الأبعاد">
     <div class="play-overlay">اضغط لبدء المشاهدة</div>
   </div>
 
