--- a/anime/al-batal-al-khumasi/episode-1/index.html
+++ b/anime/al-batal-al-khumasi/episode-1/index.html
@@ -267,14 +267,14 @@
   <div class="episodes-section">
     <h3 class="section-title">جميع الحلقات 🔃</h3>
     <ul class="episodes-list">
-  <li><a href="رابط_الحلقة_1">1. الحلقة الأولى</a></li>
-  <li><a href="رابط_الحلقة_2">2. الحلقة الثانية</a></li>
-  <li><a href="رابط_الحلقة_3">3. الحلقة الثالثة</a></li>
-  <li><a href="رابط_الحلقة_4">4. الحلقة الرابعة</a></li>
-  <li><a href="رابط_الحلقة_5">5. الحلقة الخامسة</a></li>
-  <li><a href="رابط_الحلقة_6">6. الحلقة السادسة</a></li>
-  <li><a href="رابط_الحلقة_7">7. الحلقة السابعة</a></li>
-  <li><a href="رابط_الحلقة_8">8. الحلقة الثامنة</a></li>
+  <li class="episode-item"><a href="#">1. الحلقة الأولى</a></li>
+  <li class="episode-item"><a href="#">2. الحلقة الثانية</a></li>
+  <li class="episode-item"><a href="#">3. الحلقة الثالثة</a></li>
+  <li class="episode-item"><a href="#">4. الحلقة الرابعة</a></li>
+  <li class="episode-item active"><a href="#">5. الحلقة الخامسة</a></li>
+  <li class="episode-item"><a href="#">6. الحلقة السادسة</a></li>
+  <li class="episode-item"><a href="#">7. الحلقة السابعة</a></li>
+  <li class="episode-item"><a href="#">8. الحلقة الثامنة</a></li>
 </ul>
   </div>
 
