--- a/anime/al-batal-al-khumasi/episode-1/index.html
+++ b/anime/al-batal-al-khumasi/episode-1/index.html
@@ -278,9 +278,10 @@
     <h3 class="section-title">جميع الحلقات 🔃</h3>
 
     <ul class="episodes-list">
-      <li class="episode-item" data-video="VIDEO_URL_1">
-        <a href="#">1. الحلقة الأولى</a>
-      </li>
+  <li class="episode-item" data-video="https://archive.org/embed/01_20260224_20260224_2015">
+    <a href="#">1. الحلقة الأولى</a>
+  </li>
+</ul>
 
       <li class="episode-item" data-video="VIDEO_URL_2">
         <a href="#">2. الحلقة الثانية</a>
