--- a/anime/al-batal-al-khumasi/episode-1/index.html
+++ b/anime/al-batal-al-khumasi/episode-1/index.html
@@ -317,6 +317,37 @@
 
 
 
+
+<section class="rating-section">
+  <h3 class="section-title">ما هو تقييمك للمسلسل؟</h3>
+
+  <div class="rating-icons">
+    <button data-rate="5" aria-label="رائع">
+      <svg viewBox="0 0 24 24"><path d="M12 17.5c3.5 0 6.5-2.4 6.5-5.5S15.5 6.5 12 6.5 5.5 8.9 5.5 12s3 5.5 6.5 5.5Zm0-9c1.7 0 3 1.1 3 2.5h-6c0-1.4 1.3-2.5 3-2.5Z"/></svg>
+      <span>رائع</span>
+    </button>
+
+    <button data-rate="4" aria-label="ممتع">
+      <svg viewBox="0 0 24 24"><path d="M12 18c3.9 0 7-2.7 7-6s-3.1-6-7-6-7 2.7-7 6 3.1 6 7 6Zm-3-6h6"/></svg>
+      <span>ممتع</span>
+    </button>
+
+    <button data-rate="3" aria-label="جيد">
+      <svg viewBox="0 0 24 24"><path d="M12 18c4 0 7-2.7 7-6s-3-6-7-6-7 2.7-7 6 3 6 7 6Zm-3 1h6"/></svg>
+      <span>جيد</span>
+    </button>
+
+    <button data-rate="2" aria-label="عادي">
+      <svg viewBox="0 0 24 24"><path d="M5 12h14"/></svg>
+      <span>عادي</span>
+    </button>
+
+    <button data-rate="1" aria-label="سيء">
+      <svg viewBox="0 0 24 24"><path d="M12 18c4 0 7-2.7 7-6s-3-6-7-6-7 2.7-7 6 3 6 7 6Zm3-1H9"/></svg>
+      <span>سيء</span>
+    </button>
+  </div>
+</section>
 </section>
 
 <!-- ================= FOOTER ================= -->
