--- a/anime/al-batal-al-khumasi/episode-1/index.html
+++ b/anime/al-batal-al-khumasi/episode-1/index.html
@@ -348,6 +348,50 @@
     </button>
   </div>
 </section>
+
+
+
+
+
+
+<!-- قسم مسلسلات مشابهة -->
+<section class="related-series">
+
+  <h3 class="section-title">مسلسلات مشابهة</h3>
+
+  <div class="series-slider-wrapper">
+
+    <button class="slider-btn prev arrow" data-target="relatedSlider" aria-label="السابق">‹</button>
+
+    <!-- السلايدر -->
+    <div class="series-slider slider" id="relatedSlider">
+
+      <article class="series-card slide">
+        <a href="#">
+          <img src="https://via.placeholder.com/300x420" alt="مسلسل 1">
+          <span class="series-title">مسلسل 1</span>
+        </a>
+      </article>
+
+      <article class="series-card slide"><a href="#"><img src="https://via.placeholder.com/300x420"><span class="series-title">مسلسل 2</span></a></article>
+      <article class="series-card slide"><a href="#"><img src="https://via.placeholder.com/300x420"><span class="series-title">مسلسل 3</span></a></article>
+      <article class="series-card slide"><a href="#"><img src="https://via.placeholder.com/300x420"><span class="series-title">مسلسل 4</span></a></article>
+      <article class="series-card slide"><a href="#"><img src="https://via.placeholder.com/300x420"><span class="series-title">مسلسل 5</span></a></article>
+      <article class="series-card slide"><a href="#"><img src="https://via.placeholder.com/300x420"><span class="series-title">مسلسل 6</span></a></article>
+      <article class="series-card slide"><a href="#"><img src="https://via.placeholder.com/300x420"><span class="series-title">مسلسل 7</span></a></article>
+      <article class="series-card slide"><a href="#"><img src="https://via.placeholder.com/300x420"><span class="series-title">مسلسل 8</span></a></article>
+      <article class="series-card slide"><a href="#"><img src="https://via.placeholder.com/300x420"><span class="series-title">مسلسل 9</span></a></article>
+      <article class="series-card slide"><a href="#"><img src="https://via.placeholder.com/300x420"><span class="series-title">مسلسل 10</span></a></article>
+
+    </div>
+
+    <button class="slider-btn next arrow" data-target="relatedSlider" aria-label="التالي">›</button>
+
+  </div>
+
+  <!-- النقاط -->
+  <div class="slider-dots" data-slider="relatedSlider"></div>
+
 </section>
 
 <!-- ================= FOOTER ================= -->
