--- a/anime/al-batal-al-khumasi/episode-1/index.html
+++ b/anime/al-batal-al-khumasi/episode-1/index.html
@@ -367,11 +367,13 @@
     <div class="series-slider slider" id="relatedSlider">
 
       <article class="series-card slide">
-        <a href="#">
-          <img src="https://via.placeholder.com/300x420" alt="مسلسل 1">
-          <span class="series-title">مسلسل 1</span>
-        </a>
-      </article>
+  <a href="/series/rad-al-amlaq">
+    <img
+      src="https://i.ibb.co/NgQ8tydN/c0-JLcw2vwm-BGPs-PTlz-Yeryd-AAQm.webp"
+      alt="رعد العملاق">
+    <span class="series-title">رعد العملاق</span>
+  </a>
+</article>
 
       <article class="series-card slide"><a href="#"><img src="https://via.placeholder.com/300x420"><span class="series-title">مسلسل 2</span></a></article>
       <article class="series-card slide"><a href="#"><img src="https://via.placeholder.com/300x420"><span class="series-title">مسلسل 3</span></a></article>
