--- a/anime/al-batal-al-khumasi/episode-1/index.html
+++ b/anime/al-batal-al-khumasi/episode-1/index.html
@@ -356,23 +356,20 @@
 
 <!-- قسم مسلسلات مشابهة -->
 <section class="related-series">
-
   <h3 class="section-title">مسلسلات مشابهة</h3>
 
   <div class="series-slider-wrapper">
 
-    <button class="slider-btn prev arrow" data-target="relatedSlider" aria-label="السابق">‹</button>
+    <button class="slider-btn prev arrow" data-target="relatedSlider">‹</button>
 
-    <!-- السلايدر -->
     <div class="series-slider slider" id="relatedSlider">
 
       <article class="series-card slide">
-  <a href="/series/rad-al-amlaq">
-    <img
-      src="https://i.ibb.co/NgQ8tydN/c0-JLcw2vwm-BGPs-PTlz-Yeryd-AAQm.webp"
-      alt="رعد العملاق">
-    <span class="series-title">رعد العملاق</span>
-  </a>
+        <a href="/series/rad-al-amlaq">
+          <img src="https://i.ibb.co/NgQ8tydN/c0-JLcw2vwm-BGPs-PTlz-Yeryd-AAQm.webp" alt="رعد العملاق">
+          <span class="series-title">رعد العملاق</span>
+        </a>
+      </article>
 </article>
 
       <article class="series-card slide"><a href="#"><img src="https://via.placeholder.com/300x420"><span class="series-title">مسلسل 2</span></a></article>
@@ -385,15 +382,13 @@
       <article class="series-card slide"><a href="#"><img src="https://via.placeholder.com/300x420"><span class="series-title">مسلسل 9</span></a></article>
       <article class="series-card slide"><a href="#"><img src="https://via.placeholder.com/300x420"><span class="series-title">مسلسل 10</span></a></article>
 
-    </div>
+   </div>
 
-    <button class="slider-btn next arrow" data-target="relatedSlider" aria-label="التالي">›</button>
-
+    <button class="slider-btn next arrow" data-target="relatedSlider">›</button>
   </div>
 
-  <!-- النقاط -->
+  <!-- النقاط الصفراء -->
   <div class="slider-dots" data-slider="relatedSlider"></div>
-
 </section>
 
 <!-- ================= FOOTER ================= -->
