--- a/index.html
+++ b/index.html
@@ -69,23 +69,23 @@
 
         <!-- زر القائمة -->
         <div class="menu-icon" id="aniOpen">
-    <i class="fas fa-bars"></i>
-</div>
+            <i class="fas fa-bars"></i>
+        </div>
 
         <!-- الشعار + اسم الموقع -->
-<a href="/toonia/" class="logo-box">
-  <img
-    src="https://i.ibb.co/WWQtfGzs/logo.png"
-    alt="Toonia Logo"
-    width="40"
-    height="40"
-    loading="eager"
-    decoding="async">
-    
-  <div class="site-name">
-    Too<span>nia</span>
-  </div>
-</a>
+        <a href="/toonia/" class="logo-box">
+            <img
+                src="https://i.ibb.co/WWQtfGzs/logo.png"
+                alt="Toonia Logo"
+                width="40"
+                height="40"
+                loading="eager"
+                decoding="async">
+
+            <div class="site-name">
+                Too<span>nia</span>
+            </div>
+        </a>
 
     </div>
 
@@ -96,7 +96,8 @@
             <i class="fas fa-search"></i>
         </div>
 
-        <a href="login" class="login-button">
+        <!-- تسجيل الدخول -->
+        <a href="/toonia/auth/login.html" class="login-button" rel="nofollow">
             <i class="fas fa-user"></i>
             تسجيل الدخول
         </a>
