--- a/auth/signup.html
+++ b/auth/signup.html
@@ -1,1 +1,107 @@
-.
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+    <meta charset="UTF-8">
+    <title>إنشاء حساب جديد | Toonia</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- SEO -->
+    <meta name="robots" content="noindex, nofollow">
+    <meta name="description" content="إنشاء حساب جديد في منصة Toonia">
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="auth.css">
+</head>
+<body>
+
+<main class="auth-wrapper">
+
+    <section class="auth-box">
+
+        <h1 class="auth-title">إنشاء حساب جديد</h1>
+
+        <form action="/signup" method="post" class="auth-form" novalidate>
+
+            <div class="form-group">
+                <label for="username">اسم المستخدم</label>
+                <input
+                    type="text"
+                    id="username"
+                    name="username"
+                    placeholder="اسم المستخدم"
+                    required
+                    autocomplete="username"
+                >
+            </div>
+
+            <div class="form-group">
+                <label for="email">البريد الإلكتروني</label>
+                <input
+                    type="email"
+                    id="email"
+                    name="email"
+                    placeholder="example@email.com"
+                    required
+                    autocomplete="email"
+                >
+            </div>
+
+            <div class="form-group">
+                <label for="password">كلمة المرور</label>
+                <input
+                    type="password"
+                    id="password"
+                    name="password"
+                    placeholder="••••••••"
+                    required
+                    minlength="6"
+                    autocomplete="new-password"
+                >
+            </div>
+
+            <div class="form-group">
+                <label for="confirm-password">تأكيد كلمة المرور</label>
+                <input
+                    type="password"
+                    id="confirm-password"
+                    name="confirm_password"
+                    placeholder="••••••••"
+                    required
+                    minlength="6"
+                    autocomplete="new-password"
+                >
+            </div>
+
+            <button type="submit" class="btn-primary">
+                إنشاء الحساب
+            </button>
+
+            <div class="auth-links">
+                <span>لديك حساب بالفعل؟</span>
+                <a href="login.html">تسجيل الدخول</a>
+            </div>
+
+        </form>
+
+        <div class="divider">
+            <span>أو التسجيل عبر</span>
+        </div>
+
+        <div class="social-login" role="group" aria-label="التسجيل عبر وسائل التواصل">
+            <button type="button" class="social-btn google" data-provider="Google">G</button>
+            <button type="button" class="social-btn facebook" data-provider="Facebook">f</button>
+            <button type="button" class="social-btn twitter" data-provider="X">X</button>
+        </div>
+
+        <footer class="auth-footer">
+            Toonia © <span id="year"></span>
+        </footer>
+
+    </section>
+
+</main>
+
+<!-- JS -->
+<script src="auth.js" defer></script>
+</body>
+</html>
