--- a/auth/login.html
+++ b/auth/login.html
@@ -1,1 +1,81 @@
-.
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+    <meta charset="UTF-8">
+    <title>تسجيل الدخول | Toonia</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- SEO -->
+    <meta name="robots" content="noindex, nofollow">
+    <meta name="description" content="تسجيل الدخول إلى منصة Toonia">
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="auth.css">
+</head>
+<body>
+
+<main class="auth-wrapper">
+
+    <section class="auth-box">
+
+        <h1 class="auth-title">تسجيل الدخول</h1>
+
+        <form action="/login" method="post" class="auth-form" novalidate>
+
+            <div class="form-group">
+                <label for="email">البريد الإلكتروني</label>
+                <input
+                    type="email"
+                    id="email"
+                    name="email"
+                    placeholder="example@email.com"
+                    required
+                    autocomplete="email"
+                >
+            </div>
+
+            <div class="form-group">
+                <label for="password">كلمة المرور</label>
+                <input
+                    type="password"
+                    id="password"
+                    name="password"
+                    placeholder="••••••••"
+                    required
+                    autocomplete="current-password"
+                >
+            </div>
+
+            <button type="submit" class="btn-primary">
+                دخول
+            </button>
+
+            <div class="auth-links">
+                <span>ليس لديك حساب؟</span>
+                <a href="signup.html">إنشاء حساب جديد</a>
+            </div>
+
+        </form>
+
+        <div class="divider">
+            <span>أو الدخول عبر</span>
+        </div>
+
+        <div class="social-login" role="group" aria-label="تسجيل الدخول عبر وسائل التواصل">
+            <button type="button" class="social-btn google" data-provider="Google">G</button>
+            <button type="button" class="social-btn facebook" data-provider="Facebook">f</button>
+            <button type="button" class="social-btn twitter" data-provider="X">X</button>
+        </div>
+
+        <footer class="auth-footer">
+            Toonia © <span id="year"></span>
+        </footer>
+
+    </section>
+
+</main>
+
+<!-- JS -->
+<script src="auth.js" defer></script>
+</body>
+</html>
